# gt4py_functional_frontend

./: pyproject.toml  setup.cfg
examples/: meshes.py
examples/data/: fvm_nabla_edges.vtk  fvm_nabla_grid.vtk  fvm_nabla_triangles.vtk
src/gt4py_fvlo/: extent_analysis.py  generic.py  model.py
src/gt4py_fvlo/gtl2ir/: gtl2ir.py
src/gt4py_fvlo/l2ir/: l2ir.py  l2ir_builtins.py  l2ir_def.py
src/gt4py_fvlo/l2ir/passes/: alpha_conversion.py  constant_fold.py  type_inference.py
src/gt4py_fvlo/tracing/: builtins.py  tracerir.py  tracerir_utils.py  tracing.py  utils.py
src/gt4py_fvlo/tracing/pass_helper/: collect_symbol_refs.py  conversion.py  materializer.py  pass_manager.py  scope_visitor.py  type_inference.py
src/gt4py_fvlo/tracing/passes/: constant_folding.py  datamodel.py  fix_call_type.py  global_symbol_collision_resolver.py  if_resolver.py  opaque_call_resolution.py  remove_constant_refs.py  remove_unused_symbols.py  single_use_inliner.py  tracable_function_resolver.py  tuple_getitem_resolver.py
src/gt4py_fvlo/utils/: index_space.py  uid.py
src/gtpositional/: built_in_types.py
src/gtpositional/utils/: built_in_type.py  index_space.py
src/gtutils/: io.py  vis.py
src/iterator_frontend/: cartesian_sets.py  model.py
tests/gt4py_fvlo/: cartesian_set.py  lowering.py  playground12.py  unstructured.py
tests/gt4py_fvlo2/: tracing_exploration.py
tests/iterator_frontend/: basic.py
tests/iterator_tests/: test_anton_toy.py  test_column_stencil.py  test_fvm_nabla.py  test_hdiff.py
