[metadata]
name = gt4py_functional_frontend
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.20
    gt4py@git+https://github.com/tehrengruber/gt4py.git@eve_datamodel_support
    pytest

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
atlas =
    atlas4py@git+https://github.com/GridTools/atlas4py.git@fix_blocks_ref_bug
io =
    meshio>=4.4
plot =
    matplotlib>=3.1
    pyvista>=0.31
